@@ -2,7 +2,10 @@
 #include "ExponentialDown.h"
 #include "MolecularComponents.h"
 #include "Molecule.h"
+
 #include <cmath>
+
+using namespace std ;
 
 namespace mesmer
 {
@@ -18,8 +21,27 @@ namespace mesmer
 
   bool ExponentialDown::ReadParameters(const gWellProperties* pgWellProperties) { 
 
-    const double refTemp = pgWellProperties->getDeltaEdownRefTemp();
-    const double dEdExp = pgWellProperties->getDeltaEdownExponent();
+    PersistPtr ppPropList = pgWellProperties->get_MolProp() ;
+
+    // The temperature dependence of <delta_E_down> is accounted for as:
+    //
+    // <delta_E_down>(T) = <delta_E_down>_ref * (T / refTemp)^dEdExp
+    //
+    // By default, dEdExp = 0, which means delta_E_down does not depend on temperature.
+    // Reference temperature of <Delta E down>, refTemp, has default 298.
+
+    double refTemp(298.);
+    const char* pRefTemptxt  = ppPropList->XmlReadPropertyAttribute("me:deltaEDown", "referenceTemperature", optional );
+    if(pRefTemptxt){
+      stringstream s_temp(pRefTemptxt); s_temp >> refTemp;
+    }
+
+    double dEdExp(0.0);
+    const char* pExponenttxt = ppPropList->XmlReadPropertyAttribute("me:deltaEDown", "exponent", optional);
+    if(pExponenttxt){
+      stringstream s_exp(pExponenttxt); s_exp >> dEdExp;
+    }    
+
     const double dEdRef = pgWellProperties->getDeltaEdown();
     const double temperature = 1.0/(boltzmann_RCpK * pgWellProperties->getHost()->getEnv().beta);
 
@@ -31,7 +53,7 @@ namespace mesmer
       cerr << "Delta E down is smaller than grain size: the solution may not converge.";
       return false;
     }
-    
+
     return true ; 
 
   }
