@@ -1,6 +1,21 @@
 #ifndef GUARD_ExponentialDown_h
 #define GUARD_ExponentialDown_h
 
+//-------------------------------------------------------------------------------------------
+//
+// ExponentialDown.h
+//
+// Author: Struan Robertson
+// Date:   16/Jan/2010
+//
+// This header file contains the declaration of the ExponentialDown class.
+//
+// The temperature dependence of <delta_E_down> is accounted for as:
+//
+// <delta_E_down>(T) = <delta_E_down>_ref * (T / m_DeltaEdownRefTemp)^n
+//
+//-------------------------------------------------------------------------------------------
+
 #include "EnergyTransferModel.h"
 namespace mesmer
 {
