@@ -5,7 +5,7 @@
 //-------------------------------------------------------------------------------------------
 #include <stdexcept>
 #include "Molecule.h"
-#include "Rdouble.h"
+//#include "Rdouble.h"
 
 using namespace std ;
 using namespace Constants ;
@@ -720,9 +720,8 @@ namespace mesmer
   //
   // Constructor, destructor and initialization
   //
-  gWellProperties::gWellProperties(Molecule* pMol)
-    :m_DeltaEdownExponent(0.0),
-    m_DeltaEdownRefTemp(298.0),
+  gWellProperties::gWellProperties(Molecule* pMol) : MolecularComponent(),
+    m_ppPropList(NULL),
     m_DeltaEdown(0.0),
     m_collisionFrequency(0.0),
     m_ncolloptrsize(0),
@@ -740,44 +739,41 @@ namespace mesmer
   {
     ErrorContext c(pMol->getName());
     m_host = pMol;
-    PersistPtr pp = pMol->get_PersistentPointer();
-    PersistPtr ppPropList = pp->XmlMoveTo("propertyList");
-    if(!ppPropList)
-      ppPropList=pp; //Be forgiving; we can get by without a propertyList element
+    PersistPtr pp = m_host->get_PersistentPointer();
+    m_ppPropList = pp->XmlMoveTo("propertyList");
+    if(!m_ppPropList)
+      m_ppPropList=pp; //Be forgiving; we can get by without a propertyList element
 
-    const char* txt;
-
-    txt= ppPropList->XmlReadProperty("me:deltaEDown");
+    const char* txt = m_ppPropList->XmlReadProperty("me:deltaEDown");
 
     istringstream idata(txt);
     double value(0.0);
     idata >> value;
-    const char* pLowertxt    = ppPropList->XmlReadPropertyAttribute("me:deltaEDown", "lower", optional);
-    const char* pUppertxt    = ppPropList->XmlReadPropertyAttribute("me:deltaEDown", "upper", optional);
-    const char* pStepStxt    = ppPropList->XmlReadPropertyAttribute("me:deltaEDown", "stepsize" ,optional);
-    const char* pRefTemptxt  = ppPropList->XmlReadPropertyAttribute("me:deltaEDown", "referenceTemperature", optional );
-    const char* pExponenttxt = ppPropList->XmlReadPropertyAttribute("me:deltaEDown", "exponent", optional);
+    const char* pLowertxt = m_ppPropList->XmlReadPropertyAttribute("me:deltaEDown", "lower", optional);
+    const char* pUppertxt = m_ppPropList->XmlReadPropertyAttribute("me:deltaEDown", "upper", optional);
+    const char* pStepStxt = m_ppPropList->XmlReadPropertyAttribute("me:deltaEDown", "stepsize" ,optional);
     if (pLowertxt && pUppertxt){
       double valueL(0.0), valueU(0.0), stepsize(0.0);
       stringstream s3(pLowertxt), s4(pUppertxt), s5(pStepStxt); s3 >> valueL; s4 >> valueU; s5 >> stepsize;
       m_DeltaEdown.set_range(valueL, valueU, stepsize, "deltaEdown");
       //Save PersistPtr of the XML source of this Rdouble
-      RangeXmlPtrs.push_back(ppPropList->XmlMoveToProperty("me:deltaEDown"));
+      RangeXmlPtrs.push_back(m_ppPropList->XmlMoveToProperty("me:deltaEDown"));
     }
     setDeltaEdown(value);
 
-    if(pRefTemptxt){
-      double ref_t(298.);
-      stringstream s_temp(pRefTemptxt); s_temp >> ref_t;
-      setDeltaEdownRefTemp(ref_t);
-    }
-    if(pExponenttxt){
-      double ref_exp(0.0);
-      stringstream s_exp(pExponenttxt); s_exp >> ref_exp;
-      setDeltaEdownExponent(ref_exp);
-    }    
+  }
+
+  gWellProperties::~gWellProperties()
+  {
+    if (m_egme != NULL) delete m_egme ;
+    if (m_grainDist.size()) m_grainDist.clear();
+  }
+  
+  bool gWellProperties::initialization(){
 
     // Determine the method of DOS calculation.
+
+    PersistPtr pp = m_host->get_PersistentPointer();
     const char* pDistCalcMethodtxt = pp->XmlReadValue("me:DistributionCalcMethod") ;
     if(pDistCalcMethodtxt)
     {
@@ -795,20 +791,11 @@ namespace mesmer
       pDistCalcMethodtxt = "Boltzmann"; // must exist
       m_pDistributionCalculator = DistributionCalculator::Find(pDistCalcMethodtxt);
     }
-  }
-
-  gWellProperties::~gWellProperties()
-  {
-    if (m_egme != NULL) delete m_egme ;
-    if (m_grainDist.size()) m_grainDist.clear();
-  }
-  
-  bool gWellProperties::initialization(){
 
     // Specify the energy transfer probability model.
 
     string strETPModeltxt = "ExponentialDown" ;
-    // const char* pETPModeltxt = ppReac->XmlReadValue("me:ETPModel") ;
+    // const char* pETPModeltxt = pp->XmlReadValue("me:ETPModel") ;
     const char* pETPModeltxt = strETPModeltxt.c_str() ;
     if(!pETPModeltxt) {
         cerr << "No energy transfer model specified for species" << m_host->getName() << endl;
